# library_system

./: Makefile  README.md  backend.bundle  docker-compose.yml  project.md
backend/: .dockerignore  .env  Dockerfile  README.md  backend_tree.txt  books_seed.csv  conftest.py  entrypoint.sh  manage.py  modules.md  pyproject.toml  pytest.ini  requirements.txt  test.md
backend/auth_app/: serializers.py  tests.py  urls.py  views.py
backend/books/: admin.py  filters.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/books/management/: __init__.py
backend/books/migrations/: 0001_initial.py  0002_book_created_at_book_updated_at_alter_book_author_and_more.py  0003_remove_book_books_available_lte_total_and_more.py  0004_alter_book_isbn.py  0005_remove_book_isbn.py
backend/chat/: models.py  serializers.py  tests.py  urls.py  views.py
backend/chat/migrations/: 0001_initial.py
backend/chat/services/: agent.py  ollama_client.py  prompting.py  rag_store.py  tools.py
backend/config/: asgi.py  settings.py  settings_test.py  urls.py  wsgi.py
backend/favorites/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/favorites/migrations/: 0001_initial.py
backend/loans/: admin.py  models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/loans/migrations/: 0001_initial.py
backend/notifications/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
frontend/: .dockerignore  (+6 more)
(+43 files in other folders)
